--- a/style.css
+++ b/style.css
@@ -282,21 +282,6 @@ body {
   padding-bottom: 0.3rem;
   font-size: 2.8rem;
 }
-/* .username-field {
-  display: flex;
-  align-items: center;
-  align-self: center;
-}
-.username-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #1e1e1e;
-  font-size: 16px;
-  font-weight: 400;
-  text-decoration: none;
-  overflow: scroll;
-} */
 .username-field {
   align-self: flex-start;
 }
@@ -319,16 +304,6 @@ body {
   margin-right: 0.4rem;
   padding-left: 0.4rem;
 }
-/* .log-out-img-btn:hover {
-  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  transform: scale(1.1);
-  filter: invert(0%) sepia(4%) saturate(3344%) hue-rotate(353deg)
-    brightness(99%) contrast(80%);
-}
-.username-label:hover {
-  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  color: #000;
-} */
 
 /* end of header */
 /* transactions */
@@ -712,7 +687,7 @@ body {
   .card-header-bank-name,
   .transfer-header,
   .card-number {
-    font-size: 24px;
+    font-size: 20px;
   }
   .info-about-loan {
     font-size: 11px;
@@ -806,8 +781,8 @@ body {
 }
 @media (max-width: 690px) {
   .container {
-    grid-template-columns: minmax(3rem, 1fr) minmax(min-content, 64rem) minmax(
-        3rem,
+    grid-template-columns: minmax(1rem, 1fr) minmax(min-content, 64rem) minmax(
+        1rem,
         1fr
       );
   }
@@ -862,7 +837,7 @@ body {
     gap: 1rem;
   }
   .transaction-history-time {
-    font-size: 1.15rem;
+    font-size: 1rem;
   }
   .transaction-history-value,
   .transaction-history-currency {
@@ -881,14 +856,10 @@ body {
     font-size: 0.85rem;
   }
   .rounds-img {
-    height: 3.4rem;
-  }
-  .nfc-img {
     height: 3.2rem;
   }
-  .card-header-bank-name,
-  .card-number {
-    font-size: 2.2rem;
+  .nfc-img {
+    height: 3rem;
   }
   .logo-img-white {
     padding-right: 0.2rem;
@@ -909,5 +880,71 @@ body {
   .stock-block {
     font-size: 1.1rem;
     width: 8.3rem;
+  }
+}
+@media (max-width: 500px) {
+  /* .container {
+    grid-template-columns:
+      0rem minmax(min-content, 64rem)
+      0rem;
+  } */
+  .card {
+    max-height: 300px;
+  }
+  .loan-header {
+    font-size: 20px;
+  }
+  .operations {
+    height: 93rem;
+    grid-template-rows: minmax(min-content, 30rem) minmax(min-content, 30rem) minmax(
+        min-content,
+        30rem
+      );
+  }
+  .card-number,
+  .card-header-bank-name {
+    font-size: 2rem;
+  }
+  .loan-amount-input {
+    width: 18.7rem;
+    font-size: 2rem;
+  }
+  .info-about-loan {
+    text-align: center;
+  }
+
+  .transfer-header,
+  .loan-header {
+    font-size: 1.8rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .card-number,
+  .card-header-bank-name {
+    font-size: 1.8rem;
+  }
+  .loan-amount-input {
+    width: 16.7rem;
+    font-size: 1.8rem;
+  }
+  .card-num-input,
+  .amount-and-send {
+    width: 80%;
+  }
+  .transaction-history-value,
+  .transaction-history-currency {
+    font-size: 2.2rem;
+  }
+  .type-of-operation {
+    height: 2.7rem;
+  }
+  .stock-block {
+    width: 7.8rem;
+  }
+}
+@media (max-width: 400px) {
+  .loan-amount-input {
+    width: 14.2rem;
   }
 }
